--- a/contributions.tex
+++ b/contributions.tex
@@ -7,14 +7,17 @@
 
 %The aimed mechanism solution can be used to assist the content providers, accomodating the multimedia segments in different network tiers, in this way, the regionals networks may attend the end-users. This project is aligned with the google products which may be deployed such as a plugin in a web browser or a mobile app, beyond that, the service deployment possibility in different Point of Presence nodes in many situations. it is also possible to program a long-term lease, for example, to an electrical utility company to accommodate its smart grid components such as meters, sensors, controllers, and other IoT devices. A short-term lease is also feasible, for example, when a public venue or a concert promoter wants to have a dedicated slice for a weekend-long festival and optimize it for streaming high-quality video and music data.
 
-We aim to design an hierarchical adaptive multimedia delivery collaboration strategies, aiming to approach the theoretical
-performance boundary. We proposed two strategies:
-
-Build an hierarchical adaptive multimedia delivery system to analyze the influence of chunk size variation on bitrate adaptation hierarchical scheduling algorithm;
-
-Such mechanisms will be deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. 
-This includes, among others, the creation of new communication mechanisms to offer better support to the transmission of large amounts of multimedia streams. %In this way, this project is aligned with InterSCity by proposing an optimized video delivery mechanism to enhance the stream’s quality, being directly related to the “Networking and High Performance Distributed Computing” INCT research line.
+Design an hierarchical adaptive multimedia delivery. Such mechanisms will be deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens.
 In addition, this PhD proposal is aligned with InterSCity~\footnote{http://interscity.org} by proposing an optimized video delivery mechanism to enhance the stream's quality in Smart Cities.
+
+
+%, analize the QoE and network characteristicis through the empirical experiments .  , aiming to approach the theoretical
+%performance boundary. We proposed two strategies:
+%
+%Build an hierarchical adaptive multimedia delivery system to analyze the influence of chunk size variation on bitrate adaptation hierarchical scheduling algorithm;
+%
+%This includes, among others, the creation of new communication mechanisms to offer better support to the transmission of large amounts of multimedia streams. %In this way, this project is aligned with InterSCity by proposing an optimized video delivery mechanism to enhance the stream’s quality, being directly related to the “Networking and High Performance Distributed Computing” INCT research line.
+
 
 %The InterSCity project [6, 7, 8] addresses key research challenges in smart cities in order to
 %efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens. One of the main goals of the project is to develop an open-source platform encapsulating all the necessary %building blocks for the development of applications for smart cities.
