--- a/research-goals.tex
+++ b/research-goals.tex
@@ -5,7 +5,7 @@
 \label{sec:research-goals}
 
 Considering a reliable and high-quality video delivery DASH-based to be used in the Smart City environments~\cite{gamaUCC2019, KreuzbergerWorkshop2016}. The proposed scheme will take advantage of several network-related technologies such as Cloud, Fog, and Edge Computing, as well as intelligent microservice placement and chaining. Figure~\ref{fig:scenario-arch}~(left-side) depicts a multi-tier network architecture, which is composed of a heterogeneous set of devices and applications using the resources and also offers a multi-access communication technology, such as 5G and WiFi. Based on these premises, as a novelty, we consider users to have a simultaneous multipath connectivity in different nodes~\cite{poliakovPHD2018, Velasquez2018}.
-On the right-side we describe a part of the parameters that should be assessed to define what microservices need to be deployed and what is the most suitable tier to deploy them. Notice that the parameters is down tier for feedback is distinct of the others tiers.
+On the right-side we describe part of the parameters that should be assessed to define what microservices needed to be deployed and what is the most suitable tier to deploy them. Notice that the parameters is down tier for feedback is distinct of the others tiers.
 The assessed parameters include, but are not limited to, the user's profile, the load of the local cell, the link quality, the motion complexity of the videos, and also smart city details such as the location and the traced route in case of users with mobility. Some of the nodes can be stationary, but others can range from low to high mobility patterns. %In order to take into consideration all these details, the proposed methods will have to fetch information from the routing protocols as well as the cell and subscriber radio interface information, such as location, cell load, and link quality.
 %, the type of the video application (eHealth, entertainment, augmented or virtual reality, 360 videos), the motion complexity of the videos, and also smart city details such as the location and the traced route in case of users with mobility. To take into consideration the node’s mobility. Some of them can be stationary, but others can range from low to high mobility patterns. In order to take into consideration all these details, the proposed methods will have to fetch information from the routing protocols as well as the cell and subscriber radio interface information, such as location, cell load, and link quality.
 
@@ -26,8 +26,8 @@ The assessed parameters include, but are not limited to, the user's profile, the
 %Description of the work you'd like to do, as well as the expected outcomes and results.
 
 Given the aforementioned multi-tier edge/cloud environment and service architecture, this work aims to tackle the following research questions expected:
-\textit{i)} Build an hierarchical adaptive multimedia delivery system to analyze the influence of chunk size variation on bitrate adaptation hierarchical scheduling algorithm; \textit{ii)} How to determine the best tiers to place microservices; \textit{iii)} Facilitates video streaming through multiple sources; 
-\textit{iv)} Use location information to estimate best paths/gain/ in real time of edge servers. How to dynamically estimate the gain between the different close perspective of the proximity of the servers. You need to redistribute unsolicited content or just add content on other edge servers when user changes server? Which one should we do this?
+\textit{i)} Use location information to estimate best paths in real time and how to dynamically estimate the gain between the different close perspective of the proximity of the servers. You need to redistribute unsolicited content or just add content on other nodes when the end-user changes; \textit{ii)} Analyze the influence of video chunk size variation on bitrate adaptation algorithms; \textit{iii)} How to determine the best tiers to place microservices; \textit{iv)} Facilitates video streaming through multiple sources at the same time.
+
 %A video system becomes more robust since multiple points of failure are inserted, enhancing availability; ii) increase in reliability since the information that passes through the network is not stored by the intermediate node; iii) Facilitates video streaming through multiple sources; 
 
 
