Updates from Overleaf

--- a/contributions.tex
+++ b/contributions.tex
@@ -7,9 +7,8 @@
 
 %The aimed mechanism solution can be used to assist the content providers, accomodating the multimedia segments in different network tiers, in this way, the regionals networks may attend the end-users. This project is aligned with the google products which may be deployed such as a plugin in a web browser or a mobile app, beyond that, the service deployment possibility in different Point of Presence nodes in many situations. it is also possible to program a long-term lease, for example, to an electrical utility company to accommodate its smart grid components such as meters, sensors, controllers, and other IoT devices. A short-term lease is also feasible, for example, when a public venue or a concert promoter wants to have a dedicated slice for a weekend-long festival and optimize it for streaming high-quality video and music data.
 
-Design an hierarchical adaptive multimedia delivery. Such mechanisms will be deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens.
-In addition, this PhD proposal is aligned with InterSCity~\footnote{http://interscity.org} by proposing an optimized video delivery mechanism to enhance the stream's quality in Smart Cities.
-
+Design an hierarchical adaptive multimedia delivery DASH-based, this way, optimizing video delivery mechanisms and enhance the stream's quality in Smart Cities. Such mechanisms will be deployed taking into considerations key challegens in smart cities in order to efficiently use the urban infrastructure, which in turns, leads to a better quality of life for its citizens.
+In addition, this PhD proposal is aligned with InterSCity~\footnote{http://interscity.org}.
 
 %, analize the QoE and network characteristicis through the empirical experiments .  , aiming to approach the theoretical
 %performance boundary. We proposed two strategies:
