Updates from Overleaf

--- a/data-policy.tex
+++ b/data-policy.tex
@@ -4,6 +4,5 @@
 % Our goal is to support work where the output will be made available to the broader research community. To that end, we ask that you provide us with a few sentences sharing what you intend to do with the output of your project (e.g. open sourcing code, making data sets public, etc.). Please note that Faculty Research Awards are structured as unrestricted gifts, so there are no legal requirements once a project is selected for funding. This is simply a statement of your current intentions.
 
 
-The results from this project available through publications in conferences and/or journals as well as in technical reports, expected results includes: 1 international journal paper, 3 inter-
-national conference paper, 2 national conference paper.
+The results from this project will be available through publications in conferences and/or journals as well as in technical reports. The expected results include: 1 international journal paper, 1 international conference paper, 2 national conference paper.
 Additionally, the source codes and datasets will also be made available on platforms such as sourceforge or github and on our personal webpages. 
