--- a/abstract.tex
+++ b/abstract.tex
@@ -1,13 +1,13 @@
 \begin{center}
-	{\bf Abstract}
+	{\large {\bf Abstract}}
 \end{center}
 
-Video Streaming based on Dynamic Adaptative Streaming over HTTP (DASH) has been widely adopted by the Internet video technology companies such as Netflix, Adobes HDS, Akamai HD, Google and Amazon, where the client-side video player can dynamically pick the bitrate level according to the perceived available bandwidth. 
-At the same time, actually, the video streaming services represents the majority of the internet traffic, the cisco forecast~\footnote{Cisco Visual Networking Index: Global Mobile Data Traffic Forecast Update. Link: \url{shorturl.at/hjAZ1}. Accessed: July 26, 2019.} estimates that in 2021 70\% of all internet traffic will be dominated by the video-streaming, whereas for mobile devices this estimate represent 78\% of all mobile data traffic. To accommodate this traffic %many companies have established their own CDNs to realize high availablity and low latency through deploying several geographically distributed. 
-A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services, however, it introduces new ones such as higher latency and core network congestion. 
-To overcome these issues, this work explores the edge/cloud network communication to design a large-scale cooperative video streaming in Smart City Environments, through the deployment of microservices to offer the best-possible Quality of Experience (QoE) for the end-users. These services can be deployed in a container, virtual machine, or even a web browser plug-in. One cache schemes includes a smartly caching videos in such environments which can reduce the traffic load and delay, since multimedia content may be readily available closer to the users. The video streaming can be tailored according to the user's device profile and network characteristics. It is essential to provide a adequate use of the bandwidth available for network nodes. % Moreover, a transcoder service can be used to transcode a video with a bit rate of 8 Mbps (1080p) to 5 Mbps (720p), with no visible loss in quality, if the end-user device is not ready to display videos in 1080p. This allows a larger number of users to be served while maintaining a satisfactory QoE. 
+Video Streaming based on Dynamic Adaptative Streaming over HTTP (DASH) has been widely adopted by the Internet video technology companies such as Google, Netflix, Akamai HD and Amazon, where the client-side video player can dynamically pick the bitrate level according to the perceived available bandwidth. 
+At the same time, actually, the video streaming services represents the majority of the internet traffic, the cisco forecast~\footnote{Cisco Visual Networking Index: Global Mobile Data Traffic Forecast Update. Link:~\url{http://shorturl.at/hjAZ1}. Accessed: July 26, 2019.} estimates that in 2021 70\% of all internet traffic will be dominated by the video-streaming, whereas for mobile devices this estimate represent 78\% of all mobile data traffic. To accommodate this traffic %many companies have established their own CDNs to realize high availablity and low latency through deploying several geographically distributed. 
+a good cloud-level architecture partially solves some issues related to the live stream and Video on Demand~(VoD) services, however, it introduces new ones such as higher latency and core network congestion. 
+To overcome these issues, this work explores the edge/cloud network communication to design a cooperative DASH video streaming in Smart City Environments, through the deployment of cache services to offer the best-possible Quality of Experience~(QoE) for the end-users. A cache schemes service can reduce the traffic load and delay, since multimedia content may be readily available closer to the users. This service can be deployed in a container, virtual machine, web browser plug-in or even an app module. The video streaming can be tailored according to the user's device profile and network characteristics. It is essential to provide a adequate use of the bandwidth available for network nodes. % Moreover, a transcoder service can be used to transcode a video with a bit rate of 8 Mbps (1080p) to 5 Mbps (720p), with no visible loss in quality, if the end-user device is not ready to display videos in 1080p. This allows a larger number of users to be served while maintaining a satisfactory QoE. 
 %In this proposal, we aim to build an hierarchical adaptive multimedia delivery system to analyze the influence of chunk size variation on bitrate adaptation scheduling algorithm performance. Based on the features of HTTP-based adaptive video streaming, we build a general model for debloy a cooperative video streaming delivery, which may be used in D2D in mobile network, regional networks using Points of Presence as nodes, during flash crowds where having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources.
-Based on the features of HTTP Adaptive Streaming, a general model for deploy a cooperative video streaming delivery may be used in different scenarios, for example, a local mobile network, regional networks using Points of Presence to cahing the multimedia content, beyond that, during flash crowds where having upload bandwidth may be not sufficient to accommodate the end-user, a cooperative smart caching service localy available could be deployed.
+Based on the features of HTTP Adaptive Streaming, a general model for deploy a cooperative video streaming delivery may be used in different scenarios, for example, a local mobile area network, regional networks using different Points of Presence to caching the multimedia content. Beyond that, during flash crowds where having bandwidth may be not sufficient to accommodate the end-users, devices with different configurations can work together to provide the necessary resources available.
 Designing an efficient data transfer scheme for such services is a non-trivial task.
 
 %Based on the features of HTTP-based adaptive video streaming, we build a general model describing the playback buffer evolution process. Applying stochastic theory, we respectively analyze the two most concerned metrics – rebuffering probability and average bitrate level as well as their relationships with chunk size variation in the widely-adopted rate-based algorithm. Furthermore, based on theoretical insights, we provide some recommendations for algorithm designing and bitrate encoding and also propose a lightweight adaptation algorithm. Extensive simulations verify our insights as well as the efficiency of proposed recommendations and algorithm. In summary, our contributions are three-fold.
