--- a/paper.tex
+++ b/paper.tex
@@ -48,7 +48,7 @@
     
     \input{releated-work}
     
-\begin{footnotesize}
+\begin{small}
 
 \bibliographystyle{unsrt}
 \bibliography{references}
@@ -87,12 +87,12 @@
 %  \bibitem{Flueck}  Flueck, Alexander J. 2005. \emph{ECE 100}[online]. Chicago: Illinois Institute of Technology, Electrical and Computer Engineering Department, 2005 [cited 30 August 2005]. Available from World Wide Web: (http://www.ece.iit.edu/~flueck/ece100).
 
 % \end{thebibliography}
-\end{footnotesize}
+\end{small}
 
 
 	\input{data-policy}
 	
-	\section{Attach CVs (maximum two pages for CVs)}
+% 	\section{Attach CVs (maximum two pages for CVs)}
 	
 
 \end{document}
