Updates from Overleaf

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,30 +1,6 @@
 \begin{center}
 	{\large {\bf Abstract}}
 \end{center}
-
-Video Streaming based on Dynamic Adaptative Streaming over HTTP (DASH) has been widely adopted by the Internet video technology companies such as Google, Netflix, Akamai HD and Amazon, where the client-side video player can dynamically pick the bitrate level according to the perceived available bandwidth. 
-At the same time, actually, the video streaming services represents the majority of the internet traffic, the cisco forecast~\footnote{Cisco Visual Networking Index: Global Mobile Data Traffic Forecast Update. Link:~\url{http://shorturl.at/hjAZ1}. Accessed: July 26, 2019.} estimates that in 2021 70\% of all internet traffic will be dominated by the video-streaming, whereas for mobile devices this estimate represent 78\% of all mobile data traffic. To accommodate this traffic %many companies have established their own CDNs to realize high availablity and low latency through deploying several geographically distributed. 
-a good cloud-level architecture partially solves some issues related to the live stream and Video on Demand~(VoD) services, however, it introduces new ones such as higher latency and core network congestion. 
-To overcome these issues, this work explores the edge/cloud network communication to design a cooperative DASH video streaming in Smart City Environments, through the deployment of cache services to offer the best-possible Quality of Experience~(QoE) for the end-users. A cache schemes service can reduce the traffic load and delay, since multimedia content may be readily available closer to the users. This service can be deployed in a container, virtual machine, web browser plug-in or even an app module. The video streaming can be tailored according to the user's device profile and network characteristics. It is essential to provide a adequate use of the bandwidth available for network nodes. % Moreover, a transcoder service can be used to transcode a video with a bit rate of 8 Mbps (1080p) to 5 Mbps (720p), with no visible loss in quality, if the end-user device is not ready to display videos in 1080p. This allows a larger number of users to be served while maintaining a satisfactory QoE. 
-%In this proposal, we aim to build an hierarchical adaptive multimedia delivery system to analyze the influence of chunk size variation on bitrate adaptation scheduling algorithm performance. Based on the features of HTTP-based adaptive video streaming, we build a general model for debloy a cooperative video streaming delivery, which may be used in D2D in mobile network, regional networks using Points of Presence as nodes, during flash crowds where having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources.
-Based on the features of HTTP Adaptive Streaming, a general model for deploy a cooperative video streaming delivery may be used in different scenarios, for example, a local mobile area network, regional networks using different Points of Presence to caching the multimedia content. Beyond that, during flash crowds where having bandwidth may be not sufficient to accommodate the end-users, devices with different configurations can work together to provide the necessary resources available.
-Designing an efficient data transfer scheme for such services is a non-trivial task.
-
-%Based on the features of HTTP-based adaptive video streaming, we build a general model describing the playback buffer evolution process. Applying stochastic theory, we respectively analyze the two most concerned metrics – rebuffering probability and average bitrate level as well as their relationships with chunk size variation in the widely-adopted rate-based algorithm. Furthermore, based on theoretical insights, we provide some recommendations for algorithm designing and bitrate encoding and also propose a lightweight adaptation algorithm. Extensive simulations verify our insights as well as the efficiency of proposed recommendations and algorithm. In summary, our contributions are three-fold.
-
-
-%have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating Quality of Experience (QoE) guarantees. The video streaming services already is responsible for the majority of the Internet traffic. A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services.  At same time, however, it introduces new ones such as higher latency and core network congestion. 
-%
-%
-%The main goal is to design and assess a reliable and high-quality multi-tier services architecture to be used in the fog/edge environments.
-%We discuss the impact on the performance introduced by the multi-tier fog/edge computing, and also how the services may be used to improving the Quality of Experience (QoE) for end-users.
-%	
-%The infrastructure of the network edge has been growing rapidly. Led by globally known companies in the market. CDN providers like Akamai, LimeLight, Level 3 and MaxCDN have made major investments in leading edge servers in emerging markets such as Asia, South America and Africa. VoD service companies such as Netflix, Google and Amazon have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating QoE guarantees. In addition, this paradigm has attracted companies such as Intel, Qualcomm, IBM, Cisco, who usually mention a big growth on the edge of the network in the near future.
-
-%
-% ===========================================================================================
-%
-% Having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources. The framework solution can be used to assist the content providers joinging the content in the edge of the network, in this way, the regionals networks may attend the end-users. Moreover, due to intense competition among the nodes, this available bandwidth is also not fully utilized. Based on these, various population control measures have been suggested for both mesh-based and tree-based systems.
-
-
-% Content delivery in wireless caching networks via device-to-device (D2D) communications can effectively offload the traffic burden and reduce the delivery delay and the energy consumption
+\noindent
+Video Streaming based on Dynamic Adaptive Streaming over HTTP~(DASH) has been widely adopted by video providers such as Google, Netflix, Akamai HD and others, where the client-side video player can dynamically choose the bitrate level according to the perceived available bandwidth. 
+At the same time, video streaming services represent the majority of the internet traffic, and according to Cisco forecasts\footnote{Cisco Visual Networking Index: Global Mobile Data Traffic Forecast Update. Link:~\url{http://shorturl.at/hjAZ1}. Accessed: July 29, 2019.}, in 2021 70\% of all internet traffic will be dominated by video streaming. This includes current video services as well as innovative services such as cloud gaming and future consoles (e.g. Google Stadia), whereas for mobile devices this estimate represents 78\% of all mobile data traffic. To accommodate video traffic, a good cloud-level architecture partially solves some issues related to the live stream and Video on Demand~(VoD) services. However, a centralized cloud service introduces some issues such as higher latency and core network congestion. Therefore, to improve video services, it is of paramount importance to properly distribute video streams according to their requirements: a cloud gaming infrastructure is an interactive service that needs reduced delays (a few milliseconds), while a non-interactive VoD delivery can tolerate higher delays without impairing quality of experience. A proper management and orchestration of video delivery over the Internet is core to the smooth co-existence of heterogeneous video services. This project proposes the use of edge/cloud hierarchy to design a cooperative DASH video streaming in Smart Cities, deploying cache service to offer improved Quality of Experience~(QoE) for end-users. 
